# socceranalyzer_task2

./: .gitignore  README.md  app.py  hello.py  langgraph.json  main.py  pyproject.toml  requirements.txt
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
Clustering/: clustering.py  clustering_minimal.ipynb
Clustering/data/: clustering_results.csv
Grundlagen/: 01_EDA_OpenligaDB_minimal.ipynb  01_prepare_openliga_data.py  01_wortwolken_wiki_minimal.ipynb  02_clustering_wiki_minimal.ipynb  03_RAG_wiki_minimal.ipynb  04_sentiment.ipynb  EDA_Statsbomb_KPI_Bau_minimal.ipynb  EDA_Statsbomb_minimal.ipynb  RAG_wiki_minimal.ipynb  clustering_wiki_minimal.ipynb  haeufigkeiten.json  openliga_tabellen.csv  wortwolken_wiki_minimal.ipynb
Tab1_Statistiken/: build_database_tab1.py  haeufigkeiten_wortwolken.py  prepare_openliga_data.py  statsbomb_collector_statistics_tab.py
agents/: agent_combined.py  agent_openligadb.py  agent_rag.py  agent_statsbomb.py  agent_validator.py  db.py  orchestrator.py  prompts.yaml  shared.py
data/: evaluate_end_to_end.py  evaluate_tool_selection.py  evaluate_validator.py  haeufigkeiten_wortwolken.json  haeufigkeiten_wortwolken.py  ingest.py  load_openliga.py  load_statsbomb.py  statsbomb_kpis_2015_16.json  statsbomb_kpis_2016_17.json  statsbomb_kpis_2022_23.json  statsbomb_kpis_2023_24.json  statsbomb_kpis_2024_25.json  wikipedia_leagues.json
data/rag_data/: evaluate_rag.py  ingestion.py  placeholder.py  wikipedia_collector.py
data/structured_data/: ingest.py  load_openliga.py  load_statsbomb.py
data/tab1_statistik/: haeufigkeiten_wortwolken.json  openliga_barcharts.json  (+3 more)
frontend/: design.py  helpers.py  tab_chat.py  tab_clustering.py  tab_statistics.py
services/: sentiment_service.py  stats_constants.py  stats_kpi_service.py  stats_mapping_service.py  stats_repository.py  stats_tab_service.py
