[project]
name = "socceranalyzer-task2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Config & Umgebung
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "pydantic>=2.8.2",

    # HTTP & Daten
    "requests>=2.32.3",
    "pandas>=2.2.2",

    # LLM Provider
    "openai>=2.41.0",
    "huggingface-hub>=0.24.7",

    # RAG (LlamaIndex)
    "llama-index>=0.14.22",
    "llama-index-embeddings-openai>=0.6.0",
    "llama-index-llms-openai>=0.7.9",

    # Vector Database
    "pinecone>=9.1.0",

    # Agents (LangChain)
    "langchain>=1.3.4",
    "langchain-openai>=1.2.2",
    "langchain-core>=1.4.0",
    "langgraph>=1.2.4",

    # UI
    "streamlit>=1.0.0",
]